--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -76,14 +76,15 @@
 		.left{
 			height: 390px;
 			.imgContainer{
+				text-align: center;
 				margin: 0;
 				align-items: center;
-				padding-left:80px;
+				padding-left:0px;
 				padding-top: 10px;
-				width: 400;
+				width: auto;
 				justify-content: center;
 				img	{
-					height:45vh;
+					height:40vh;
 
 				}
 			}
