--- a/src/components/skills/skills.scss
+++ b/src/components/skills/skills.scss
@@ -19,6 +19,19 @@
 		font-size: 30px;
 	}
 
+	img{
+		margin: 20px;
+		height: 210px;
+		width: 210px;
+		padding: 10px;
+
+	}
+
+	img:hover{
+		filter: grayscale(120%);
+	}
+
+
 
 	@media screen and (max-width: 700px) {
 		background-color: #353c4a;
@@ -42,6 +55,14 @@
 			text-align: center;
 			padding-left: 0%;
 			font-size: 200%;
+		}
+
+		img{
+			margin: 0px;
+			height: auto;
+			width: 50%;
+			padding-left: 15%;
+			padding-right: 15%;
 		}
 
 		.wrapper{
